[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/BackGround.gd" type="Script" id=1]
[ext_resource path="res://drawable/ui/White32.png" type="Texture" id=2]


[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/AbstractRects.png-4422e5b8df1ebdfe26c75348f5138a4b.stex"

[node name="BackGround" type="Node2D"]
script = ExtResource( 1 )

[node name="White32" type="Sprite" parent="."]
modulate = Color( 0.313726, 0.545098, 0.980392, 1 )
position = Vector2( -0.264031, 0.0280533 )
scale = Vector2( 17.4063, 17.4063 )
z_index = -1
texture = ExtResource( 2 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
modulate = Color( 1, 1, 1, 0.0392157 )
position = Vector2( -0.529755, 0 )

[node name="AbstractRects" type="Sprite" parent="CanvasModulate"]
modulate = Color( 0.279167, 0.5, 0.25, 1 )
scale = Vector2( 1.2, 1.2 )
texture = SubResource( 1 )

[node name="AbstractRects2" type="Sprite" parent="CanvasModulate"]
modulate = Color( 0.5, 0.354167, 0.25, 1 )
scale = Vector2( 1.2, 1.2 )
texture = SubResource( 1 )

[node name="AbstractRects3" type="Sprite" parent="CanvasModulate"]
modulate = Color( 0.25, 0.258333, 0.5, 1 )
position = Vector2( -0.707916, 0.471935 )
scale = Vector2( 1.2, 1.2 )
texture = SubResource( 1 )
